@@ -40,6 +40,7 @@ Added char?
 Added string?
 Added list->string
 Added initial lisp ascension library
+Extending lisp ascension library with reverse, fold-right and a couple char functions
 
 ** Changed
 Makefile is modified to follow bin standard
